--- a/app/src/main/res/layout/activity_complaint_details.xml
+++ b/app/src/main/res/layout/activity_complaint_details.xml
@@ -115,6 +115,8 @@
                             style="@style/TextAppearance.SchoolMate.ComplaintItemDetail"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:maxLines="1"
+                            android:ellipsize="end"
                             android:layout_gravity="center"
                             android:text="@string/complaint_date" />
 
